# sync-drive

./: .gitignore  main.py  pyproject.toml  spec.py
frontend/: package.json
frontend/src/: App.css  App.tsx  useDebounce.ts
frontend/src/note/: CreateNote.tsx  const.ts
