[tool.poetry]
name = "drive-sync"
version = "0.1.0"
description = ""
authors = ["ArnoldoRicardo <anyback@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyDrive2 = {extras = ["fsspec"], version = "^1.14.0"}
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
